--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.20",
     "contentful": "^11.4.4",
-    "i18next": "^24.2.2",
     "next": "15.1.6",
     "next-i18next": "^15.4.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-i18next": "^15.4.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
